fix z-index in header and add lazy load

--- a/src/components/common/Header/Header.module.scss
+++ b/src/components/common/Header/Header.module.scss
@@ -4,7 +4,7 @@
 	border-bottom: 1px solid $ig-elevated-separator;
 	position: fixed;
 	top: 0px;
-	z-index: 999999999;
+	z-index: 999;
 
 	&__container {
 		@include grid-wide;
